fix(review): FILE watcher guard, per-dir glob, CSV=FILE, path/timeouts
- Skip FileWatcher @PostConstruct when bridge.file.enabled=false; health reports UP when disabled
- Apply runtime registration filePattern via per-directory glob map
- Treat protocol CSV like FILE for watch registration; validate sourceId path (400)
- FileMessageHandler: connect/read timeouts from bridge.openelis.*; sanitize multipart filename
- Remove misleading validateFileContent helper from direct-import handler

Made-with: Cursor